force-app/main/default/objects/Department_c__c/Department_c__c.object-meta.xml
<CustomObject>
    <description>Maps standard hospital facility tracking nodes across layouts.</description>
    <label>Department__c</label>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>