force-app/main/default/objects/Department_c__c/fields/Department_Head_Link__c.field-meta.xml
<CustomField>
    <fullName>Department_Head_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department Head Link</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Department Head Link</relationshipLabel>
    <relationshipName>Department_head</relationshipName>
    <type>Lookup</type>
</CustomField>