force-app/main/default/objects/Department_c__c/fields/Operational_Status__c.field-meta.xml
<CustomField>
    <fullName>Operational_Status__c</fullName>
    <label>Operational Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Temporarily Closed</fullName>
            </value>
            <value>
                <fullName>Under Renovation</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>