force-app/main/default/objects/Department_c__c/validationRules/Department_Head.validationRule-meta.xml
<ValidationRule>
    <fullName>Department_Head</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>&quot;A department head
must be designated.&quot;</errorMessage>
</ValidationRule>